# metrics-exercise

./: README.md  docker-compose.yml
backend/: .gitignore  Dockerfile  dev.env  docker.env  main.py  pyproject.toml  requirements.txt
backend/src/: __init__.py  app.py  dependencies.py
backend/src/db/: database.py
backend/src/metrics/: crud.py  cruds.py  models.py  routes.py  schemas.py
backend/tests/: conftest.py
backend/tests/metrics/: test_crud.py  test_cruds.py
frontend/: Dockerfile  package-lock.json  package.json
frontend-chakra/: package-lock.json
frontend-chakra/src/: App.tsx
frontend-chakra/src/components/addmetrics/: AddMetrics.tsx  MetricsForm.tsx  MetricsInputDatetime.tsx  MetricsInputName.tsx  MetricsInputValue.tsx  MetricsSelectMetric.tsx  MetricsSubmit.tsx
frontend-chakra/src/components/averagesmetrics/: AverageMetrics.tsx  FilterMetrics.tsx  RadioAverage.tsx
frontend-chakra/src/context/: MetricsContext.tsx  MetricsProvider.tsx  MetricsReducer.tsx
frontend-chakra/src/hooks/: useAverages.tsx
frontend-chakra/src/interfaces/: interfaces.tsx
frontend/public/: index.html
frontend/src/: App.tsx  Theme.ts
frontend/src/components/: DateTime.tsx
frontend/src/components/addmetrics/: AddMetrics.tsx  MetricsForm.tsx  MetricsList.tsx  MetricsSelectMetric.tsx  MetricsSubmit.tsx
frontend/src/components/averagesmetrics/: AverageMetrics.tsx  Chart.tsx  DatesAverage.tsx  (+2 more)
frontend/src/context/: MetricsContext.tsx  MetricsProvider.tsx
frontend/src/hooks/: useAverages.tsx  useMetrics.tsx
frontend/src/interfaces/: interfaces.tsx
